--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -147,7 +147,9 @@ h3 {
     font-size: 16px;
     font-family: helvetica;
     font-weight: 300;
+    line-height: 1.5;
     text-decoration-color: rgb(203, 9, 54);
+
 }
 
 
