--- a/stylesheets/buttons.css
+++ b/stylesheets/buttons.css
@@ -1,3 +1,10 @@
+.bttn {
+    display: inline;
+    vertical-align: middle;
+}
+
+
+
 .bttn-custom {
     padding: 0;
     border-width: 0;
@@ -15,8 +22,7 @@
     -webkit-transition: all 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
     transition: all 0.5s cubic-bezier(0.02, 0.01, 0.47, 1);
 
-    /* heading size */
-    font-size: 30px;
+    display: inline;
 }
 .bttn-custom:after {
   position: absolute;
