--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -10,7 +10,7 @@ body {
   background: #ffffff;
   color: #444444;
   width: 90%;
-  height: 1800px;
+  height: 2000px;
   padding: 30px;
   margin: 0 auto;
 }
@@ -163,4 +163,12 @@ h3 {
     width: 40%;
     margin: 0 auto;
     text-align: center;
+}
+
+ul {
+    font-size: 16px;
+    font-family: helvetica;
+    font-weight: 300;
+    line-height: 1.5;
+    text-decoration-color: rgb(203, 9, 54);
 }
