--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -35,6 +35,14 @@ strong {
   color:rgb(203, 9, 54)
 }
 
+ul {
+    font-size: 16px;
+    font-family: helvetica, sans-serif;
+    font-weight: 300;
+    line-height: 1.5;
+    text-decoration-color: rgb(203, 9, 54);
+}
+
 .feature-img {
   width: 97.78%;
   padding-left: 2%;
@@ -163,12 +171,4 @@ h3 {
     width: 40%;
     margin: 0 auto;
     text-align: center;
-}
-
-ul {
-    font-size: 16px;
-    font-family: helvetica;
-    font-weight: 300;
-    line-height: 1.5;
-    text-decoration-color: rgb(203, 9, 54);
 }
