--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -136,7 +136,7 @@ h3 {
     color: rgb(29, 41, 97);
 }
 
-.info-text {
+.info_text {
     font-size: 16px;
     font-family: helvetica;
     font-weight: 300;
